--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header {
-    width: 90%;
+    width: 100vh;
     height: 34vw;
     margin: 20px auto;
     background: url('https://res.cloudinary.com/de3tdd3db/image/upload/v1751284979/header_img_zmm9xy.png') no-repeat center center;
