--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .header {
     width: 100%;
-    height: 34vw;
+    height: 34vh;
     margin: 20px;
     background: url('https://res.cloudinary.com/de3tdd3db/image/upload/v1751284979/header_img_zmm9xy.png') no-repeat center center;
     background-size: cover;
