--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,8 +1,7 @@
 .header {
     width: 100%;
-    height: 34vh;
-    margin: 20px;
-    background-image: url('https://res.cloudinary.com/de3tdd3db/image/upload/v1751284979/header_img_zmm9xy.png') no-repeat center center;
+    height: 34vw;
+    background: url('https://res.cloudinary.com/de3tdd3db/image/upload/v1751284979/header_img_zmm9xy.png') no-repeat center center;
     background-size: cover;
     position: relative;
     border-radius: 20px;
